# py-opendisplay

./: .release-please-manifest.json  CHANGELOG.md  FINDINGS.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: lint.yml  release.yml  test.yml
docs/: partial-update-protocol.md
examples/: animate.py
src/opendisplay/: __init__.py  _debug.py  battery.py  cli.py  crypto.py  device.py  discovery_ip.py  display_palettes.py  exceptions.py  landing.py  ota.py  partial.py
src/opendisplay/encoding/: __init__.py  bitplanes.py  compression.py  images.py
src/opendisplay/models/: __init__.py  advertisement.py  buzzer_activate.py  config.py  config_json.py  enums.py  led_flash.py
src/opendisplay/protocol/: __init__.py  commands.py  config_parser.py  config_serializer.py  responses.py
src/opendisplay/transport/: __init__.py  base.py  connection.py  ip.py
tests/: conftest.py
tests/unit/: test_auth_server_proof.py  test_battery.py  test_bwry_panel_palette.py  test_config_crc.py  test_config_json_roundtrip.py  test_config_serialization_fixes.py  test_connection_clear_cache.py  test_connection_notification_queue.py  test_connection_watcher_leak.py  test_data_extended.py  test_device_buzzer_activate.py  test_device_command_serialization.py  test_device_nfc_write.py  test_device_partial.py  test_device_upload_compression.py  test_device_upload_flow.py  test_device_upload_rotation.py  test_encoding_bitplanes.py  test_encoding_compression.py  test_encoding_gray4.py  test_encoding_images.py  test_firmware_limitation_warnings.py  test_landing.py  test_minor_model_validation.py  test_models_advertisement.py  test_models_buzzer_activate.py  test_models_led_flash.py  test_models_new_packets.py  test_module_enums.py  test_nfc_packet_ordering.py  test_ota.py  test_ota_mac_increment.py  test_partial.py  test_pipe_write.py  test_pipe_write_sender.py  test_protocol_commands.py  test_protocol_error_frames.py  test_protocol_responses.py  test_required_packets.py  test_transport_ip.py  (+1 more)
