[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-opendisplay"
version = "7.3.1"
description = "Python library for OpenDisplay BLE e-paper displays"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "g4bri3lDev", email = "admin@g4bri3l.de"}
]

keywords = ["opendisplay", "e-paper", "eink", "ble", "bluetooth", "display"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]


dependencies = [
    "bleak>=1.0.1",
    "pillow>=10.0.0",
    "numpy>=1.24.0,!=2.4.0",
    "bleak-retry-connector>=3.5.0",
    "epaper-dithering==5.0.6",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
cli = [
    "rich>=13.0.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.148.8",
]

[project.urls]
Homepage = "https://opendisplay.org"
Repository = "https://github.com/OpenDisplay-org/py-opendisplay"

[project.scripts]
opendisplay = "opendisplay.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opendisplay"]
include = ["src/opendisplay/py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pylint.format]
max-line-length = 120
max-module-lines = 1500

[tool.pylint.basic]
# Allow unit-suffixed names (e.g. full_update_mC for milli-Coulombs)
variable-rgx = "^[a-zA-Z_][a-zA-Z0-9_]*$"
argument-rgx = "^[a-zA-Z_][a-zA-Z0-9_]*$"
attr-rgx = "^[a-zA-Z_][a-zA-Z0-9_]*$"

[tool.pylint.design]
max-args = 16
max-positional-arguments = 16
max-locals = 28              # _build_info_tree renders a complex tree with many conditional vars
max-attributes = 22          # config dataclasses have many fields by nature
max-branches = 25
max-statements = 70
max-returns = 9
max-public-methods = 21      # OpenDisplayDevice API surface grows with device features

[tool.pylint.messages_control]
disable = [
    "fixme",                   # TODO comments are fine
    "duplicate-code",          # structural similarity by design
    "import-outside-toplevel", # intentional lazy imports to avoid circular deps
    "unnecessary-pass",        # standard exception hierarchy pattern
    "broad-exception-caught",  # intentional best-effort catch in BLE disconnect
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "prek>=0.3.4",
    "pylint>=4.0.5",
]
